gcc/testsuite/rust/rustc/ui/issues/issue-7607-1.rs
struct Foo {
    x: isize
}

impl Fo { // { dg-error ".E0412." "" { target *-*-* } }
    fn foo() {}
}

fn main() {}

